--- a/rialto/pom.xml
+++ b/rialto/pom.xml
@@ -14,8 +14,20 @@
         <servletapi.version>3.1.0</servletapi.version>
     </properties>
 
-    <dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
+    <dependencies>
         <!--Spring core-->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -27,7 +39,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>${org.springframework.version}</version>
+            <version>4.2.5.RELEASE</version>
         </dependency>
 
         <!--Servlet api-->
@@ -36,7 +48,6 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>${servletapi.version}</version>
         </dependency>
-
 
     </dependencies>
 </project>
