--- a/rialto/pom.xml
+++ b/rialto/pom.xml
@@ -12,6 +12,7 @@
         <jdk.version>1.8</jdk.version>
         <org.springframework.version>4.3.1.RELEASE</org.springframework.version>
         <servletapi.version>3.1.0</servletapi.version>
+        <org.spring.security.version>4.1.1.RELEASE</org.spring.security.version>
     </properties>
 
     <build>
@@ -42,11 +43,43 @@
             <version>4.2.5.RELEASE</version>
         </dependency>
 
+        <!--Spring MVC-->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>${org.spring.security.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${org.spring.security.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${org.spring.security.version}</version>
+        </dependency>
+
         <!--Servlet api-->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>${servletapi.version}</version>
+        </dependency>
+
+        <!--Apache HTTP components-->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpasyncclient</artifactId>
+            <version> 4.1.2</version>
         </dependency>
 
     </dependencies>
