--- a/rialto/pom.xml
+++ b/rialto/pom.xml
@@ -82,5 +82,12 @@
             <version> 4.1.2</version>
         </dependency>
 
+        <!-- jsoup HTML parser library @ http://jsoup.org/ -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.9.2</version>
+        </dependency>
+
     </dependencies>
 </project>
