--- a/rialto/pom.xml
+++ b/rialto/pom.xml
@@ -70,23 +70,35 @@
         </dependency>
 
         <!--Apache HTTP components-->
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.5.2</version>
-        </dependency>
+        <!-- <dependency>
+             <groupId>org.apache.httpcomponents</groupId>
+             <artifactId>httpclient</artifactId>
+             <version>4.5.2</version>
+         </dependency>
 
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpasyncclient</artifactId>
-            <version> 4.1.2</version>
-        </dependency>
+         <dependency>
+             <groupId>org.apache.httpcomponents</groupId>
+             <artifactId>httpasyncclient</artifactId>
+             <version> 4.1.2</version>
+         </dependency>-->
 
-        <!-- jsoup HTML parser library @ http://jsoup.org/ -->
+        <!-- jsoup HTML parser library -->
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>1.9.2</version>
+        </dependency>
+
+        <!--LOGGIN-->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.6.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.6.2</version>
         </dependency>
 
     </dependencies>
